[package]
name = "mlkem-tls"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "X25519MLKEM768 / X25519MLKEM1024 hybrid post-quantum kem per draft-ietf-tls-ecdhe-mlkem, in pure rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/f4rkh4d/mlkem-tls"
readme = "README.md"
keywords = ["crypto", "post-quantum", "kem", "tls", "hybrid"]
categories = ["cryptography", "no-std"]

[lib]
name = "mlkem_tls"

[features]
default = ["std"]
std = ["mlkem-rs/std", "x25519-dalek/alloc", "rand_core/std", "subtle/std", "zeroize/std"]

[dependencies]
mlkem-rs = { version = "0.8", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
rand_core = { version = "0.6", default-features = false }
subtle = { version = "2.5", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
